[tool.poetry]
name = "conditional-ude"
version = "0.1.0"
description = ""
authors = ["max-de-rooij <m.d.rooij@tue.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pysr = "^0.19.3"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
